# fastapi-tdd-docker

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py
project/tests/: conftest.py  test_summaries.py  test_summaries_unit.py
